background image text set

--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HR Offsite 2024</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,9 +11,25 @@
 </head>
 
 <body>
-    <div id="background-container">
-        <img id="backgroundimage" src="images/lakes.jpg" alt="">
-        <img id="imagescipla" src="images/Cipla_White.png" alt="">
-    </div>
+    <header>
+        <!-- You can add a header if needed -->
+    </header>
+
+    <main>
+        <div id="background-container">
+            <img id="backgroundimage" src="images/lakes.jpg" alt="Scenic Lakes Background">
+            <img id="imagescipla" src="images/Cipla_White.png" alt="Cipla Logo">
+            <div id="centered-text">
+                <h4>You are born to do great things</h4>
+                <h6>Welcome to HR Offsite 2024</h6>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <!-- You can add a footer if needed -->
+    </footer>
+
+    <!-- Add your JavaScript files here if needed -->
 </body>
 </html>
