background yellow image text set

--- a/1.html
+++ b/1.html
@@ -23,13 +23,15 @@
                 <h4>You are born to do great things</h4>
                 <h6>Welcome to HR Offsite 2024</h6>
             </div>
+            <div id="centered-textimage">
+                <img src="images/Beyond the Horizon.png" alt="Beyond the Horizon.png">
+            </div>
+            <div id="centered-textimage">
+                <img src="images/Beyond the Horizon.png" alt="Beyond the Horizon.png">
+            </div>
         </div>
     </main>
 
-    <footer>
-        <!-- You can add a footer if needed -->
-    </footer>
-
-    <!-- Add your JavaScript files here if needed -->
+ 
 </body>
 </html>
