login button set

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 </head>
 
 <body>
-    <header>
-        <!-- You can add a header if needed -->
-    </header>
 
     <main>
         <div id="background-container">
@@ -26,12 +23,13 @@
             <div id="centered-textimage">
                 <img src="images/Beyond the Horizon.png" alt="Beyond the Horizon.png">
             </div>
-            <div id="centered-textimage">
-                <img src="images/Beyond the Horizon.png" alt="Beyond the Horizon.png">
-            </div>
+            
+            <input type="text" id="name-input" placeholder="Enter your name" required>
+            <input type="password" id="passcode-input" placeholder="Enter your passcode" required>
+            <button id="login-button"><b>LOGIN</b><br> to let your greatness unfold</button>
+
         </div>
     </main>
 
- 
 </body>
 </html>
