--- a/index4.html
+++ b/index4.html
@@ -11,27 +11,31 @@
 </head>
 
 <body width="100vw" height="100vh">
-    <a href="index4.html">Go to Page 4</a>
+    <a href="index2.html">Go to Page 2</a>
     
         <div id="background-container">
             <img id="backgroundimage" src="images/BG.png" alt="Scenic Lakes Background">
             <img id="imagescipla" src="images/Cipla_White.png" alt="Cipla Logo">
             <img id="textimagetopright" src="images/Beyond the Horizon.png" alt="Beyond the Horizon.png">
-            <h6 id="texttopright">MEET YOUR TEAMS'S FAMILY</h6>      
+            <h6 id="texttoprightpage4">MEET YOUR TEAMS</h6>      
         </div>
 
-        <div id="image-container">
-            <div class="image"><img src="images/1.jpg" alt="Image 1"></div>
-            <div class="image"><img src="images/2.jpg" alt="Image 2"></div>
-            <div class="image"><img src="images/3.jpg" alt="Image 3"></div>
+        <div id="image-container-page4">
+            <div class="images"><img src="images/41.avif" alt="Image 1"></div>
+            <div class="images"><img src="images/42.jpg" alt="Image 2"></div>
+            <div class="images"><img src="images/43.jpg" alt="Image 3"></div>
+            <div class="images"><img src="images/44.jpg" alt="Image 3"></div>
             <!-- Add more images as needed -->
         </div>
 
-        <div width="100vw" height="100vh">
-            <button id="scrollButtonr">⬅️</button>
-            <button id="scrollButtonl">➡️</button>
+        <div id="buttonid">
+            <input style="border-radius: 100px;" class="b" type="button" value="Brave_Nick">
+            <input style="border-radius: 100px;" class="b" type="button" value="Beautiful_Priyanka">
+            <input style="border-radius: 100px;" class="b" type="button" value="Genious_Carol">
+            <input style="border-radius: 100px;" class="b" type="button" value="Smart_Amit">
         </div>
 
+       
    
 </body>
 </html>
