page no5 html addv3

--- a/index4.html
+++ b/index4.html
@@ -29,10 +29,10 @@
         </div>
 
         <div id="buttonid">
-            <input style="border-radius: 100px;" class="b" type="button" value="Brave_Nick">
-            <input style="border-radius: 100px;" class="b" type="button" value="Beautiful_Priyanka">
-            <input style="border-radius: 100px;" class="b" type="button" value="Genious_Carol">
-            <input style="border-radius: 100px;" class="b" type="button" value="Smart_Amit">
+            <input style="border-radius: 100px;" class="b" type="button" value="Brave_Nick" readonly>
+            <input style="border-radius: 100px;" class="b" type="button" value="Beautiful_Priyanka" readonly>
+            <input style="border-radius: 100px;" class="b" type="button" value="Genious_Carol" readonly>
+            <input style="border-radius: 100px;" class="b" type="button" value="Smart_Amit" readonly>
         </div>
 
        
