--- a/index5.html
+++ b/index5.html
@@ -28,8 +28,8 @@
         </div>
 
         <div width="100vw" height="100vh">
-            <button id="scrollButtonr">⬅️</button>
-            <button id="scrollButtonl">➡️</button>
+            <button id="scrollButtonr">⬅️</button readonly>
+            <button id="scrollButtonl">➡️</button readonly>
         </div>
 
    
