page no5 html addv4

--- a/index3.html
+++ b/index3.html
@@ -17,7 +17,7 @@
             <img id="backgroundimage" src="images/BG.png" alt="Scenic Lakes Background">
             <img id="imagescipla" src="images/Cipla_White.png" alt="Cipla Logo">
             <img id="textimagetopright" src="images/Beyond the Horizon.png" alt="Beyond the Horizon.png">
-            <h6 id="texttopright">MEET YOUR TEAMS'S FAMILY</h6>      
+            <h6 id="texttopright">Dear XXX</h6>      
         </div>
 
       
